--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,17 @@
   "author": "Amr Mohammed",
   "license": "MIT",
   "engines": {
-    "node": ">18.0.0"
+    "node": ">22.0.0"
   },
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.1",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.6",
     "qs": "^6.14.0",
     "slugify": "^1.6.6"
   },
