--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "packageManager": "pnpm@10.15.1",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
